Adjusted _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,6 @@
 theme: jekyll-theme-minimal
+logo: lemon-logo.png
+title: Lemon
+description: LED Monitor, for monitoring all sort of stuff and getting notified when something happens.
+show_downloads: "true"
+google_analytics: UA-42605714-4
